--- a/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
+++ b/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
@@ -15,7 +15,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_clt:
     description: Timeseries of global mean total cloud coverage.
     themes:
@@ -31,7 +31,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_clwvi:
     description: Timeseries of global mean water path.
     themes:
@@ -39,7 +39,7 @@ diagnostics:
     realms:
       - atmos
     variables:
-      clivi:
+      clwvi:
          mip: Amon
          preprocessor: prep_zon
     scripts:
@@ -47,7 +47,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_evspsbl:
     description: Timeseries of global mean evaporation.
     themes:
@@ -63,7 +63,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_hfns:
     description: Timeseries of global mean surface net heat flux.
     themes:
@@ -74,12 +74,13 @@ diagnostics:
       hfns:
         mip: Amon
         preprocessor: prep_zon
+        derive: true
     scripts:
       glob_timeseries:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_pr:
     description: Timeseries of global mean precipitation.
     themes:
@@ -95,7 +96,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_prc:
     description: Timeseries of global mean convective precipitation.
     themes:
@@ -111,7 +112,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_prl:
     description: Timeseries of global mean large-scale precipitation.
     themes:
@@ -127,7 +128,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_prsn:
     description: Timeseries of global mean snow fall.
     themes:
@@ -143,7 +144,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_prw:
     description: Timeseries of global mean water vapor content.
     themes:
@@ -170,12 +171,13 @@ diagnostics:
       rlns:
         mip: Amon
         preprocessor: prep_zon
+        derive: true
     scripts:
       glob_timeseries:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_rlut:
     description: Timeseries of global mean outgoing longwave radiation (TOA).
     themes:
@@ -202,12 +204,13 @@ diagnostics:
       rsns:
         mip: Amon
         preprocessor: prep_zon
+        derive: true
     scripts:
       glob_timeseries:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_rsnt:
     description: Timeseries of global mean net solar radiation (TOA).
     themes:
@@ -218,12 +221,13 @@ diagnostics:
       rsnt:
         mip: Amon
         preprocessor: prep_zon
+        derive: true
     scripts:
       glob_timeseries:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_rtmt:
     description: Timeseries of global mean radiation budget (TOA).
     themes:
@@ -239,7 +243,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_tas:
     description: Timeseries of global mean surface temperature.
     themes:
@@ -255,7 +259,7 @@ diagnostics:
         script: quicklooks/global_timeseries.py
       zon_timeseries:
         script: quicklooks/zonal_timeseries.py
-        
+
   glob_timeseries_ts:
     description: Timeseries of global mean 2-m temperature.
     themes:
