--- a/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
+++ b/esmvalcore/quicklook/diagnostics_atmos_dynamics.yml
@@ -1,3 +1,15 @@
+GLOB_TIMESERIES: &glob_timeseries
+  glob_timeseries:
+    script: quicklooks/global_timeseries.py
+
+ALL_TIMESERIES: &all_timeseries
+  glob_timeseries:
+    script: quicklooks/global_timeseries.py
+  zon_timeseries:
+    script: quicklooks/zonal_timeseries.py
+    ancestors: ['*/glob_timeseries']
+
+
 diagnostics:
 
   glob_timeseries_clivi:
@@ -11,10 +23,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_clt:
     description: Timeseries of global mean total cloud coverage.
@@ -27,10 +36,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_clwvi:
     description: Timeseries of global mean water path.
@@ -43,10 +49,7 @@ diagnostics:
          mip: Amon
          preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_evspsbl:
     description: Timeseries of global mean evaporation.
@@ -59,10 +62,7 @@ diagnostics:
          mip: Amon
          preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_hfns:
     description: Timeseries of global mean surface net heat flux.
@@ -76,10 +76,7 @@ diagnostics:
         preprocessor: prep_zon
         derive: true
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_pr:
     description: Timeseries of global mean precipitation.
@@ -92,10 +89,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_prc:
     description: Timeseries of global mean convective precipitation.
@@ -108,10 +102,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_prl:
     description: Timeseries of global mean large-scale precipitation.
@@ -124,10 +115,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_prsn:
     description: Timeseries of global mean snow fall.
@@ -140,10 +128,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_prw:
     description: Timeseries of global mean water vapor content.
@@ -156,10 +141,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_rlns:
     description: Timeseries of global mean net longwave radiation (surface).
@@ -173,10 +155,7 @@ diagnostics:
         preprocessor: prep_zon
         derive: true
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_rlut:
     description: Timeseries of global mean outgoing longwave radiation (TOA).
@@ -189,10 +168,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_rsns:
     description: Timeseries of global mean net solar radiation (surface).
@@ -206,10 +182,7 @@ diagnostics:
         preprocessor: prep_zon
         derive: true
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_rsnt:
     description: Timeseries of global mean net solar radiation (TOA).
@@ -223,10 +196,7 @@ diagnostics:
         preprocessor: prep_zon
         derive: true
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_rtmt:
     description: Timeseries of global mean radiation budget (TOA).
@@ -239,10 +209,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_tas:
     description: Timeseries of global mean surface temperature.
@@ -255,10 +222,7 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
 
   glob_timeseries_ts:
     description: Timeseries of global mean 2-m temperature.
@@ -271,7 +235,4 @@ diagnostics:
         mip: Amon
         preprocessor: prep_zon
     scripts:
-      glob_timeseries:
-        script: quicklooks/global_timeseries.py
-      zon_timeseries:
-        script: quicklooks/zonal_timeseries.py
+      <<: *all_timeseries
