--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -277,7 +277,7 @@ EMAC:
   input_dir:
     default: '[dataset]/[channel]'
   input_file: '[dataset]*[channel].nc'
-  output_dir: '{variable_group}'
+  output_dir: '{variable_group}/[dataset]'
   output_file: '[dataset]_[short_name]'
   cmor_type: 'CMIP6'
   cmorize:
